fix : mobile device with width <320px not responsive

--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -707,10 +707,6 @@ video {
   width: 75%;
 }
 
-.w-40 {
-  width: 10rem;
-}
-
 .w-5 {
   width: 1.25rem;
 }
@@ -719,16 +715,16 @@ video {
   width: 30px;
 }
 
-.w-\[320px\] {
-  width: 320px;
-}
-
 .w-full {
   width: 100%;
 }
 
 .max-w-\[245px\] {
   max-width: 245px;
+}
+
+.max-w-\[320px\] {
+  max-width: 320px;
 }
 
 .max-w-xs {
@@ -746,6 +742,10 @@ video {
 
 .cursor-pointer {
   cursor: pointer;
+}
+
+.grid-cols-1 {
+  grid-template-columns: repeat(1, minmax(0, 1fr));
 }
 
 .grid-cols-2 {
@@ -949,6 +949,15 @@ video {
   line-height: 2.25rem;
 }
 
+.text-\[10px\] {
+  font-size: 10px;
+}
+
+.text-lg {
+  font-size: 1.125rem;
+  line-height: 1.75rem;
+}
+
 .text-sm {
   font-size: 0.875rem;
   line-height: 1.25rem;
@@ -1083,6 +1092,16 @@ video {
 
   .sm\:grid-cols-2 {
     grid-template-columns: repeat(2, minmax(0, 1fr));
+  }
+
+  .sm\:text-sm {
+    font-size: 0.875rem;
+    line-height: 1.25rem;
+  }
+
+  .sm\:text-xl {
+    font-size: 1.25rem;
+    line-height: 1.75rem;
   }
 }
 
@@ -1239,12 +1258,12 @@ video {
     width: 40px;
   }
 
-  .lg\:w-\[470px\] {
-    width: 470px;
+  .lg\:max-w-\[470px\] {
+    max-width: 470px;
   }
 
-  .lg\:w-\[480px\] {
-    width: 480px;
+  .lg\:max-w-\[480px\] {
+    max-width: 480px;
   }
 
   .lg\:max-w-md {
@@ -1330,12 +1349,12 @@ video {
     width: 135px;
   }
 
-  .xl\:w-\[574px\] {
-    width: 574px;
+  .xl\:max-w-\[574px\] {
+    max-width: 574px;
   }
 
-  .xl\:w-\[600px\] {
-    width: 600px;
+  .xl\:max-w-\[600px\] {
+    max-width: 600px;
   }
 
   .xl\:max-w-none {
